@@ -341,6 +341,7 @@ libuae_a_SOURCES = \
 	src/include/uae/mman.h \
 	src/include/uae/parser.h \
 	src/include/uae/ppc.h \
+	src/include/uae/qemu.h \
 	src/include/uae/regparam.h \
 	src/include/uae/seh.h \
 	src/include/uae/specialmonitors.h \
