@@ -45,7 +45,6 @@ typedef struct amiga_config {
     //const char *cpu_model;
     int cpu_32bit_addressing;
     int fast;
-    int fast_on_accuracy_level;
     int no_accuracy_adjustment;
     const char *warning;
     int enhanced_audio_filter;
